k8s/flag-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: flag
  labels:
    app.kubernetes.io/name: flag-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flag-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flag-service
    spec:
      containers:
      - name: flag-service
        image: 657333849558.dkr.ecr.us-east-1.amazonaws.com/tooglemaster/flag-service:latest
        ports:
        - containerPort: 8002
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
