k8s/flag-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: flag
spec:
  selector:
    app.kubernetes.io/name: flag-service
  ports:
  - name: http
    protocol: TCP
    port: 8002
    targetPort: 8002
